--- a/zkc/mining/walkthrough.mdx
+++ b/zkc/mining/walkthrough.mdx
@@ -1,68 +1,70 @@
-# Mining Walkthrough
+---
+title: Mining Walkthrough
+description: Step-by-step guide walking through the entire ZK mining process.
+icon: road
+---
 
-::::steps
+## Step-by-step
 
-## Enable ZK mining within Bento
+<Steps>
+  <Step title="Enable ZK mining within Bento">
+    Please see [Enabling ZK Mining](/zkc/mining/enable).
+  </Step>
+  <Step title="Start Proving">
+    Provers are now ready to run proving workloads with ZK mining enabled; this can be done by [running a prover](/provers/quick-start) on the Boundless marketplace or elsewhere.
 
-Please see [Enabling ZK Mining](/zkc/mining/enable).
+    For each proving job, R0VM will automatically generate work proofs. These work proofs track the total amount of proving work done (in cycles). *Each epoch*, provers will need to submit their accumulated work to the PoVW accounting smart contract. If provers DO NOT submit work each epoch, they will not receive any rewards for that epoch.
 
-## Start Proving
+    To do this, provers must use the [Boundless CLI](/zkc/mining/enable#make-sure-to-have-the-boundless-cli-installed) and run the following three commands, `prepare-mining`, `submit-mining` and `claim-mining-rewards`.
+  </Step>
+  <Step title="Create and Update the State File">
+    Once provers have run some jobs, they can create a new "state" file from work proofs stored in Bento using `prepare-mining`:
 
-Provers are now ready to run proving workloads with ZK mining enabled; this can be done by [running a prover](/provers/quick-start) on the Boundless marketplace or elsewhere.
+    ```bash
+    boundless rewards prepare-mining --new ${REWARD_ADDRESS} --state-file ${STATE_FILE_LOCATION}
+    ```
 
-For each proving job, R0VM will automatically generate work proofs. These work proofs track the total amount of proving work done (in cycles). *Each epoch*, provers will need to submit their accumulated work to the PoVW accounting smart contract. If provers DO NOT submit work each epoch, they will not receive any rewards for that epoch.
+    where `${STATE_FILE_LOCATION}` is something like: `~/folder/state.bin`.
 
-To do this, provers must use the [Boundless CLI](/zkc/mining/enable#make-sure-to-have-the-boundless-cli-installed) and run the following three commands, `prepare-mining`, `submit-mining` and `claim-mining-rewards`.
+    `prepare-mining` aggregates all work proofs and stores the combined proof to the state file. This uses Bento to generate the aggregated work proof (see [prepare.rs](https://github.com/boundless-xyz/boundless/blob/040645c9f91bc4804ba63c9b4744a5a21df0c90c/crates/boundless-cli/src/commands/povw/prepare.rs#L137-L178)); therefore, make sure to have Bento running locally or specify a valid Bento API URL endpoint via `--bento-api-url`. This process is entirely local (i.e. it does not send any transaction).
 
-## Create and Update the State File
+    The resultant state file keeps track of all work done so far for one reward address. Each reward address should have *exactly* one state file associated with it. Submitting work for a rewards address requires all previously submitted receipts to be included in the state file. *The same state file must be used for submitting any additional work done by the associated rewards address.* If two state files have the same rewards address, they will conflict during `submit-mining` because they will have different Merkle tree states.
 
-Once provers have run some jobs, they can create a new "state" file from work proofs stored in Bento using `prepare-mining`:
+    <Warning>
+    Please note that this state file is *very important* and it should be kept in a durable location.
 
-```bash
-boundless rewards prepare-mining --new ${REWARD_ADDRESS} --state-file ${STATE_FILE_LOCATION}
-```
+    Loss of this state file *will result* in the loss of all work that is not submitted for the respective rewards address, meaning rewards for any work done since the last `submit-mining` **will be lost**.
 
-where `${STATE_FILE_LOCATION}` is something like: `~/folder/state.bin`.
+    In this scenario, a new rewards address must be specified for Bento, and Bento should be restarted to allow further work to be recorded properly against the new rewards address. *To avoid this scenario, it is recommended to store the state file in a durable location.*
+    </Warning>
 
-`prepare-mining` aggregates all work proofs and stores the combined proof to the state file. This uses Bento to generate the aggregated work proof (see [prepare.rs](https://github.com/boundless-xyz/boundless/blob/040645c9f91bc4804ba63c9b4744a5a21df0c90c/crates/boundless-cli/src/commands/povw/prepare.rs#L137-L178)); therefore, make sure to have Bento running locally or specify a valid Bento API URL endpoint via `--bento-api-url`. This process is entirely local (i.e. it does not send any transaction).
+    Provers only specify the `--new ${REWARD_ADDRESS}` flag once, this is necessary to create the state file for that specific rewards address. Once the state file is created, provers can run `prepare-mining` and specify the state file location directly:
 
-The resultant state file keeps track of all work done so far for one reward address. Each reward address should have *exactly* one state file associated with it. Submitting work for a rewards address requires all previously submitted receipts to be included in the state file. *The same state file must be used for submitting any additional work done by the associated rewards address.* If two state files have the same rewards address, they will conflict during `submit-mining` because they will have different Merkle tree states.
+    ```bash
+    boundless rewards prepare-mining --state-file ${STATE_FILE_LOCATION}
+    ```
 
-:::warning
-Please note that this state file is *very important* and it should be kept in a durable location.
+    or add the mining state file location to the rewards module config by running:
 
-Loss of this state file *will result* in the loss of all work that is not submitted for the respective rewards address, meaning rewards for any work done since the last `submit-mining` **will be lost**.
+    ```bash
+    boundless rewards setup
+    ```
 
-In this scenario, a new rewards address must be specified for Bento, and Bento should be restarted to allow further work to be recorded properly against the new rewards address. *To avoid this scenario, it is recommended to store the state file in a durable location.*
-:::
+    which would store the state file location, such that provers can simply run:
 
-Provers only specify the `--new ${REWARD_ADDRESS}` flag once, this is necessary to create the state file for that specific rewards address. Once the state file is created, provers can run `prepare-mining` and specify the state file location directly:
+    ```bash
+    boundless rewards prepare-mining
+    ```
 
-```bash
-boundless rewards prepare-mining --state-file ${STATE_FILE_LOCATION}
-```
+    from now on. If the state file location changes, make sure to update the location in the config by running `boundless rewards setup` again.
+  </Step>
+  <Step title="Submit the aggregated work proof onchain">
+    After running `prepare-mining`, provers are ready to submit onchain with:
 
-or add the mining state file location to the rewards module config by running:
+    ```bash
+    boundless rewards submit-mining
+    ```
 
-```bash
-boundless rewards setup
-```
-
-which would store the state file location, such that provers can simply run:
-
-```bash
-boundless rewards prepare-mining
-```
-
-from now on. If the state file location changes, make sure to update the location in the config by running `boundless rewards setup` again.
-
-## Submit the aggregated work proof onchain
-
-After running `prepare-mining`, provers are ready to submit onchain with:
-
-```bash
-boundless rewards submit-mining
-```
-
-`submit-mining` also requires Bento for proving (see [submit.rs](https://github.com/boundless-xyz/boundless/blob/040645c9f91bc4804ba63c9b4744a5a21df0c90c/crates/boundless-cli/src/commands/povw/submit.rs#L170-L176)). Therefore, make sure to have Bento running locally or specify a valid Bento API URL endpoint via `--bento-api-url`.
-::::
+    `submit-mining` also requires Bento for proving (see [submit.rs](https://github.com/boundless-xyz/boundless/blob/040645c9f91bc4804ba63c9b4744a5a21df0c90c/crates/boundless-cli/src/commands/povw/submit.rs#L170-L176)). Therefore, make sure to have Bento running locally or specify a valid Bento API URL endpoint via `--bento-api-url`.
+  </Step>
+</Steps>
