--- a/zkc/quick-start.mdx
+++ b/zkc/quick-start.mdx
@@ -106,7 +106,7 @@ mining_reward_cap = staked_amount / 15
 *  Therefore, if a miner stakes 5000 *\$ZKC*, they will have a <Tooltip tip="Concretely, this is set via the `POVW_REWARD_CAP_SCALAR` in the token contracts." cta="Click here to see the relevant code." href="https://github.com/boundless-xyz/zkc/blob/933570f2e23ef33e9d60a1e33cdaeb62eac4ce38/src/interfaces/IRewards.sol#L39-L43">mining reward cap</Tooltip> of `5000 / 15 = 333.33 $ZKC` each epoch.
 * Miners carry out work using [Bento](/provers/proving-stack#what-is-bento). Each proving job in Bento will generate a work proof. These cryptographically verify the amount of work done for each job.
 * These work proofs are submitted onchain; each miner MUST submit their work proofs onchain at least once every epoch IF they want to be eligible for that epoch's rewards. Miners are free to submit previous work done during any later epochs; this will just delay any reward eligibility, for the work done, to the submission epoch.
-* If there are 1 trillion <Tooltip tip="Proofs are measured in cycles" cta="Click here to read more about cycles" href="https://dev.risczero.com/terminology#clock-cycles">cycles</Tooltip> of work submitted for the current epoch, and a miner submits 1 billion cycles worth of work proofs, their work represent 0.1% of the total work in the epoch.
+* If there are 1 trillion <Tooltip tip="Proofs are measured in cycles." cta="Click here to read more about cycles" href="https://dev.risczero.com/terminology#clock-cycles">cycles</Tooltip> of work submitted for the current epoch, and a miner submits 1 billion cycles worth of work proofs, their work represent 0.1% of the total work in the epoch.
 * Therefore, the miner will receive 0.1% of 75% of the total reward *\$ZKC* for the epoch.
   - Specifically, the miner will receive `0.075% of ~385k` *\$ZKC* which equals ~289 `$ZKC`.
   - The miner has a reward cap of ~333 *\$ZKC*. Since the miner has already submitted enough work for ~289 *\$ZKC*, they have ~45 *\$ZKC* worth of reward cap left. If they submit enough work before the end of the epoch to cover the ~45 *\$ZKC* remaining, they will receive the full amount their stake position entitles them to.
