--- a/developers/what.mdx
+++ b/developers/what.mdx
@@ -4,7 +4,7 @@ description: Boundless is a universal protocol that brings ZK to every chain.
 icon: question
 ---
 
-**Boundless is a universal protocol that brings ZK to every chain.**
+## Overview
 
 Using Boundless, developers can create expressive, high-throughput applications that bypass traditional block size/gas limits.
 
@@ -14,7 +14,7 @@ By abstracting away the complexity of proof generation, aggregation, and onchain
 
 This architecture decouples execution from consensus and introduces a new paradigm for verifiable computing. As the number of Boundless prover nodes grows, the total capacity of the protocol increases, scaling compute across every chain.
 
-### **Next Steps**
+## Next Steps
 
 Choose the path that fits what you’re building:
 
