--- a/index.mdx
+++ b/index.mdx
@@ -1,97 +1,136 @@
 ---
-title: "Documentation"
-description: "Welcome to the new home for your documentation"
+title: "The future of compute begins here"
+description: "Boundless is a protocol for accessing verifiable compute on any chain and rewarding nodes for contributing useful work."
+mode: center
 ---
 
-## Setting up
-
-Get your documentation site up and running in minutes.
-
-<Card
-  title="Start here"
-  icon="rocket"
-  href="/quickstart"
-  horizontal
->
-  Follow our three step quickstart guide.
-</Card>
-
-## Make it yours
-
-Design a docs site that looks great and empowers your users.
-
-<Columns cols={2}>
-  <Card
-    title="Edit locally"
-    icon="pen-to-square"
-    href="/development"
-  >
-    Edit your docs locally and preview them in real time.
-  </Card>
-  <Card
-    title="Customize your site"
-    icon="palette"
-    href="/essentials/settings"
-  >
-    Customize the design and colors of your site to match your brand.
-  </Card>
-    <Card
-    title="Set up navigation"
-    icon="map"
-    href="/essentials/navigation"
-  >
-    Organize your docs to help users find what they need and succeed with your product.
-  </Card>
-  <Card
-    title="API documentation"
-    icon="terminal"
-    href="/api-reference/introduction"
-  >
-    Auto-generate API documentation from OpenAPI specifications.
-  </Card>
-</Columns>
-
-## Create beautiful pages
-
-Everything you need to create world-class documentation.
-
-<Columns cols={2}>
-  <Card
-    title="Write with MDX"
-    icon="pen-fancy"
-    href="/essentials/markdown"
-  >
-    Use MDX to style your docs pages.
-  </Card>
-  <Card
-    title="Code samples"
-    icon="code"
-    href="/essentials/code"
-  >
-    Add sample code to demonstrate how to use your product.
-  </Card>
-  <Card
-    title="Images"
-    icon="image"
-    href="/essentials/images"
-  >
-    Display images and other media.
-  </Card>
-  <Card
-    title="Reusable snippets"
-    icon="recycle"
-    href="/essentials/reusable-snippets"
-  >
-    Write once and reuse across your docs.
-  </Card>
-</Columns>
-
-## Need inspiration?
-
-<Card
-  title="See complete examples"
-  icon="stars"
-  href="https://mintlify.com/customers"
->
-  Browse our showcase of exceptional documentation sites.
-</Card>
+<Tabs>
+  <Tab title="Quick Start" icon="forward-fast">
+    <Columns cols={2}>
+      <Card
+        title="Developers"
+        icon="code"
+        href="/developers/quick-start"
+      >
+        Write your first guest program, and request your first ZK proof on Boundless. 
+      </Card>
+      <Card
+        title="Provers"
+        icon="server"
+        href="/provers/quick-start"
+      >
+        Learn how to spin up a Boundless prover and start proving on Boundless.
+      </Card>
+      <Card
+        title="$ZKC"
+        icon="coin"
+        href="/zkc/quick-start"
+      >
+        Stake your $ZKC and begin proving on Boundless.
+      </Card>
+      <Card
+        title="ZK Mining"
+        icon="pickaxe"
+        href="/zkc/mining/overview"
+      >
+        Generate rewards for ZK proving on Boundless.
+      </Card>
+    </Columns>
+  </Tab>
+  <Tab title="Tutorials" icon="graduation-cap">
+    <Columns cols={3}>
+      <Card
+        title="Build A Program"
+        icon="hammer"
+        href="/developers/tutorials/build"
+      >
+      </Card>
+      <Card
+        title="Request a Proof"
+        icon="hand"
+        href="/developers/tutorials/request"
+      >
+      </Card>
+      <Card
+        title="Smart Contract Requestors"
+        icon="robot"
+        href="/developers/tutorials/smart-contract-requestor"
+      >
+      </Card>
+      <Card
+        title="Setting up a Trusted Prover"
+        icon="user-secret"
+        href="/developers/tutorials/sensitive-inputs"
+      >
+      </Card>
+      <Card
+        title="Callbacks"
+        icon="webhook"
+        href="/developers/tutorials/callbacks"
+      >
+      </Card>
+      <Card
+        title="Proof Composition"
+        icon="recycle"
+        href="/developers/tutorials/proof-composition"
+      >
+      </Card>
+    </Columns>
+  </Tab>
+  <Tab title="Tooling" icon="toolbox">
+    <Columns cols={2}>
+      <Card
+        title="Boundless CLI"
+        icon="terminal"
+        href="/developers/tooling/cli"
+      >
+      </Card>
+      <Card
+        title="Boundless SDK"
+        icon="code"
+        href="/developers/tooling/sdk"
+      >
+      </Card>
+      <Card
+        title="Boundless Mainnet Explorer"
+        icon="internet-explorer"
+        href="https://explorer.boundless.network/orders"
+      >
+      </Card>
+      <Card
+        title="Boundless Testnet Explorer"
+        icon="flask-vial"
+        href="https://explorer.testnet.boundless.network/orders"
+      >
+      </Card>
+    </Columns>
+  </Tab>
+  <Tab title="Reference" icon="list">
+    <Columns cols={2}>
+      <Card
+        title="Chains & Deployments"
+        icon="link"
+        href="/developers/smart-contracts/deployments"
+      >
+      </Card>
+      <Card
+        title="Verifier Contracts"
+        icon="unlock"
+        href="/developers/smart-contracts/verifier-contracts"
+      >
+      </Card>
+      <Card
+        title="$ZKC Token Docs"
+        icon="coin"
+        href="https://github.com/boundless-xyz/zkc?tab=readme-ov-file#zkc"
+      >
+      </Card>
+      <Card
+        title="Bento Technical Design"
+        icon="box-open"
+        href="/provers/bento"
+      >
+      </Card>
+    </Columns>
+  </Tab>
+</Tabs>
