--- a/provers/quick-start.mdx
+++ b/provers/quick-start.mdx
@@ -101,7 +101,7 @@ If everything works, you should see something like the following:
 
 ## Running the Prover Setup Wizard
 
-Once Bento is running successfully, it is time to configure the [broker](/provers/proving-stack#what-is-the-broker). The [Boundless CLI](/developers/tooling/cli) provides an interactive setup wizard to help configure the [broker.toml](/provers/broker#settings-in-brokertoml) and compose.yml(https://github.com/boundless-xyz/boundless/blob/main/compose.yml) files.
+Once Bento is running successfully, it is time to configure the [broker](/provers/proving-stack#what-is-the-broker). The [Boundless CLI](/developers/tooling/cli) provides an interactive setup wizard to help configure the [broker.toml](/provers/broker#settings-in-brokertoml) and [compose.yml](https://github.com/boundless-xyz/boundless/blob/main/compose.yml) files.
 
 ### Install the Boundless CLI
 
